--- a/Mobil 1 Fan Guide/en.lproj/MainStoryboard.storyboard
+++ b/Mobil 1 Fan Guide/en.lproj/MainStoryboard.storyboard
@@ -433,6 +433,21 @@
                                     <outlet property="delegate" destination="bwh-Hy-8Oa" id="ksY-o9-bQm"/>
                                 </connections>
                             </scrollView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="BUu-52-xmI">
+                                <rect key="frame" x="270" y="294" width="50" height="73"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" image="PageCurl@2x.png">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="showWallpapers:" destination="bwh-Hy-8Oa" eventType="touchDown" id="t5I-Rn-6lY"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.058823533356189728" green="0.10588236153125763" blue="0.14117647707462311" alpha="1" colorSpace="deviceRGB"/>
                     </view>
@@ -629,6 +644,7 @@ Circuit of The Americas is ideally situated on a 1000-acre site in southeast Aus
         <image name="91-beaker-2.png" width="20" height="24"/>
         <image name="InfoDivider@2x.png" width="88" height="640"/>
         <image name="InfoDrawerBackground@2x.png" width="10" height="640"/>
+        <image name="PageCurl@2x.png" width="100" height="126"/>
         <image name="TechCar@2x.png" width="961" height="620"/>
         <image name="TechDrivers@2x.png" width="394" height="640"/>
         <image name="TechFanFest@2x.png" width="949" height="620"/>
@@ -637,67 +653,6 @@ Circuit of The Americas is ideally situated on a 1000-acre site in southeast Aus
         <image name="TickerGradientExtended@2x.png" width="640" height="1260"/>
         <image name="VideoCarousel.png" width="320" height="353"/>
     </resources>
-    <classes>
-        <class className="M1CountdownViewController" superclassName="UITabBarController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1CountdownViewController.h"/>
-        </class>
-        <class className="M1FirstViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1FirstViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="newsTable" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="M1MapViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1MapViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="toggleMapView:" candidateClass="UISegmentedControl"/>
-                <relationship kind="outlet" name="containerView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="infoView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="mapScrollView" candidateClass="UIScrollView"/>
-                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
-            </relationships>
-        </class>
-        <class className="M1NavigationBar" superclassName="UINavigationBar">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1NavigationBar.h"/>
-        </class>
-        <class className="M1NewsArticleViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1NewsArticleViewController.h"/>
-        </class>
-        <class className="M1ScheduleViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1ScheduleViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="scheduleTabTable" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="scheduleTabTitle" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="M1TechnologyStoryViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1TechnologyStoryViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="infoSection" candidateClass="UIWebView"/>
-            </relationships>
-        </class>
-        <class className="M1TechnologyViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1TechnologyViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="showTechInfo:"/>
-                <relationship kind="outlet" name="carsText" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="driversButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="driversText" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="fanFestText" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="technologyScroller" candidateClass="UIScrollView"/>
-                <relationship kind="outlet" name="tourButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="trackButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="trackText" candidateClass="UIButton"/>
-            </relationships>
-        </class>
-        <class className="M1VideoViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/M1VideoViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="videoThumbnailSelect:"/>
-                <relationship kind="outlet" name="videoScrollView" candidateClass="UIScrollView"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
